--- a/HTML unitOne/firstPage.html
+++ b/HTML unitOne/firstPage.html
@@ -10,5 +10,14 @@
 </head>
 <body>
     
+    <div>
+        <strong>This is the HomePage of the bootcamp, so far!</strong>
+    </div>
+
+    <div>
+        <ul>
+            <li><a href="listassignment.html"> List assignment </a></li>
+        </ul>
+    </div>
 </body>
-</<!-- Potato here -->html>
+</html>
