--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div>
         <ul>
-            <li><a href="listassignment.html"> List assignment </a></li>
+            <li><a href="unitOne/listassignment.html"> List assignment </a></li>
         </ul>
     </div>
 </body>
