--- a/unitOne/listassignment.html
+++ b/unitOne/listassignment.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="Footer">
-        <h1><a href="firstPage.html">Back to Home</a></h1>
+        <h1><a href="../index.html">Back to Home</a></h1>
     </div>
 </body>
 </html>
