--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Udemy bootcamp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
@@ -17,6 +17,7 @@
     <div>
         <ul>
             <li><a href="unitOne/listassignment.html"> List assignment </a></li>
+            <li><a href="unitOne/lexi.html">Image assignment</a></li>
         </ul>
     </div>
 </body>
