adding back to home to lexi page

--- a/unitOne/lexi.html
+++ b/unitOne/lexi.html
@@ -28,6 +28,8 @@
         </ul>
         <p>Want to see more boxers? <a href="https://www.google.com/search?q=boxer+puppies&client=firefox-b-1-ab&tbm=isch&tbo=u&source=univ&sa=X&ved=0ahUKEwiIlf_QterZAhUF92MKHWRJCUwQsAQIJw&biw=1440&bih=691">Let's Go!</a></p>
     </div>
+
+    <div><a href="../index.html">Home</a></div>
     
 </body>
 </html>
