adding pokemon exercise

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
             <li><a href="unitOne/listassignment.html"> List assignment </a></li>
             <li><a href="unitOne/lexi.html">Image assignment</a></li>
+            <li><a href="unitOne/pokemon.html">Pokemon Assignment</a></li>
         </ul>
     </div>
 </body>
