--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="unitOne/listassignment.html"> List assignment </a></li>
             <li><a href="unitOne/lexi.html">Image assignment</a></li>
             <li><a href="unitOne/pokemon.html">Pokemon Assignment</a></li>
+            <li><a href="unitOne/registrationExercise.html">Form Assignment</a></li>
         </ul>
     </div>
 </body>
